<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabcalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab1"
            android:icon="@drawable/icon_calcular_metricas"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabbd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab2"
            android:icon="@drawable/icon_bd"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabcreditos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab3"
            android:icon="@drawable/icon_creditos"/>
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpage"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.viewpager.widget.ViewPager>
</LinearLayout>