<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/textViewTittleTab1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Controlador.CalcularMetricas">

    <!-- Layout de los componentes para la seleccion del programam desde la    bd -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textTitulo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/title_tab1"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="213dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textSeleccionaCodigo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/tab1_text_view1"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Spinner
                    android:background="@drawable/style_spinner"
                    android:id="@+id/codigos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:textSize="18sp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/btn_calcular" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textSubtitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/tab1_text_subtitulo"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textN1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="130dp"
                        android:layout_marginTop="9dp"
                        android:layout_marginRight="10dp"
                        android:text="N1"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/textn1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="130dp"
                        android:layout_marginTop="21dp"
                        android:layout_marginRight="10dp"
                        android:text="n1"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/textN2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="130dp"
                        android:layout_marginTop="21dp"
                        android:layout_marginRight="10dp"
                        android:text="N2"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/textn2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="130dp"
                        android:layout_marginTop="21dp"
                        android:layout_marginRight="10dp"
                        android:text="n2"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/textN"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="136dp"
                        android:layout_marginTop="21dp"
                        android:layout_marginRight="10dp"
                        android:text="N"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/textn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="136dp"
                        android:layout_marginTop="21dp"
                        android:layout_marginRight="10dp"
                        android:text="n"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/textV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="136dp"
                        android:layout_marginTop="21dp"
                        android:layout_marginRight="10dp"
                        android:text="V"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/textD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="136dp"
                        android:layout_marginTop="21dp"
                        android:layout_marginRight="10dp"
                        android:text="D"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/textL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="136dp"
                        android:layout_marginTop="21dp"
                        android:layout_marginRight="10dp"
                        android:text="L"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/textE"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="136dp"
                        android:layout_marginTop="21dp"
                        android:layout_marginRight="10dp"
                        android:text="E"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/textT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="136dp"
                        android:layout_marginTop="21dp"
                        android:layout_marginRight="10dp"
                        android:text="T"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/textB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="136dp"
                        android:layout_marginTop="21dp"
                        android:layout_marginRight="10dp"
                        android:text="B"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/editTextN1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="120dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text=""
                        android:enabled="false"
                        android:textSize="13sp" />

                    <EditText
                        android:id="@+id/editTextTextn1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="120dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text=""
                        android:enabled="false"
                        android:textSize="13sp" />

                    <EditText
                        android:id="@+id/editTextTextN2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="120dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text=""
                        android:enabled="false"
                        android:textSize="13sp" />

                    <EditText
                        android:id="@+id/editTextTextn2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="120dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text=""
                        android:enabled="false"
                        android:textSize="13sp" />

                    <EditText
                        android:id="@+id/editTextTextN"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="120dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text=""
                        android:enabled="false"
                        android:textSize="13sp" />

                    <EditText
                        android:id="@+id/editTextTextn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="120dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text=""
                        android:enabled="false"
                        android:textSize="13sp" />

                    <EditText
                        android:id="@+id/editTextTextV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="120dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text=""
                        android:enabled="false"
                        android:textSize="13sp" />

                    <EditText
                        android:id="@+id/editTextTextD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="120dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text=""
                        android:enabled="false"
                        android:textSize="13sp" />

                    <EditText
                        android:id="@+id/editTextTextL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="120dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text=""
                        android:enabled="false"
                        android:textSize="13sp" />

                    <EditText
                        android:id="@+id/editTextTextE"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="120dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text=""
                        android:enabled="false"
                        android:textSize="13sp" />

                    <EditText
                        android:id="@+id/editTextTextT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="120dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text=""
                        android:enabled="false"
                        android:textSize="13sp" />

                    <EditText
                        android:id="@+id/editTextTextB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="120dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text=""
                        android:enabled="false"
                        android:textSize="13sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>